<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vluminum</string>
    <string name="copyright">© Copyright 2015 - Velp Tecnologia</string>
    <string name="versao">Versão 0.0.2.2</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_mapa">Pontos no Mapa</string>
    <string name="title_activity_cadastro_poste">CadastroPosteActivity</string>
    <string name="spinner_opcao_padrao">-- Selecione --</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
    <string name="excluir">Excluir</string>
    <string name="novo">Novo</string>
    <string name="nova">Nova</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="limpar">Limpar</string>
    <string name="fotos">Fotos</string>
    <string name="materiais">Materiais</string>
    <string name="cancelar">Cancelar</string>
    <string name="moduloCadastro">Módulo de Cadastro</string>
    <string name="cadastroPoste">Cadastro de Poste</string>
    <string name="cadastroPonto">Cadastro de Ponto</string>
    <string name="cadastroFoto">Cadastro de Foto</string>
    <string name="cadastroOs">Cadastro de Ordem de Serviço</string>
    <string name="cadastroServico">Cadastro de Serviço</string>
    <string name="pesquisaPonto">Pesquisa de Ponto</string>
    <string name="pesquisaOs">Pesquisa de Ordem de Serviço</string>
    <string name="listaOs">Lista de Ordem de Serviço</string>
    <string name="listaPontos">Lista de Pontos</string>
    <string name="listaPontosOs">Lista de Pontos da OS</string>
    <string name="listaFotos">Lista de Fotos</string>
    <string name="listaServicos">Lista de Serviços</string>
    <string name="pesquisaServicos">Pesquisa de Serviços</string>
    <string name="listaServicosPonto">Lista de Serviços do Ponto</string>
    <string name="questionario">Questionário</string>
    <string name="title_activity_modulo_cadastro">ModuloCadastroActivity</string>
    <string name="title_activity_cadastro_ponto">CadastroPontoActivity</string>
    <string name="pesquisarEndereco">Pesquisar Endereço</string>
    <string name="obtendoCoordenadas">Obtendo coordenadas...</string>
    <string name="testarWS">Testando Web Service...</string>
    <string name="obtendoEndereco">Obtendo endereço...</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="opcoes">Opções</string>
    <string name="sincronismoInicial">Sincronismo Inicial</string>
    <string name="configuracao">Configuração do Web Service</string>
    <string name="atualizarAplicativo">Atualizar Aplicativo</string>
    <string name="sair">Sair</string>
    <string name="title_activity_configuracao_ws_activity">configuracao_ws_activity</string>
    <string name="home">Home</string>
    <string name="url">URL</string>
    <string name="porta">Porta</string>
    <string name="nomeWS">Nome WS</string>
    <string name="testar">Testar</string>
    <string name="sincronismo">Sincronismo</string>
    <string name="tracarRota">Traçar Rota</string>
    <string name="ordensServico">Ordens Serviço</string>
    <string name="lerCodigoBarras">Ler Código Barras</string>
</resources>
