<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.velp.vluminum.activity.CadastroMaterialActivity">

    <ScrollView
        android:id="@+id/containerPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/lerCodigoBarrasBtn"
                style="@style/botao"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:height="2dp"
                android:drawableLeft="@drawable/codigo_barras"
                android:text="@string/lerCodigoBarras" />

            <!-- grupo -->
            <TextView
                style="@style/labelCampoFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Grupo:"
                android:textColor="#ff4180ff" />

            <Spinner
                android:id="@+id/grupoMaterialSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_opcao_padrao" />

            <!-- tipo -->
            <TextView
                style="@style/labelCampoFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo:"
                android:textColor="#ff4180ff" />

            <Spinner
                android:id="@+id/tipoMaterialSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <!-- material -->
            <TextView
                style="@style/labelCampoFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Material:"
                android:textColor="#ff4180ff" />

            <Spinner
                android:id="@+id/materialSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <!-- Num Série -->
            <TextView
                android:id="@+id/textNumSerie"
                style="@style/labelCampoFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nº de Série:"
                android:textColor="#ff4180ff" />

            <EditText
                android:id="@+id/numSerieEditText"
                style="@style/campoFormulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/salvarMaterialBtn"
                style="@style/botao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/check"
                android:text="@string/salvar" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>



